syntax = "proto3";

package paymentv1;

import "google/api/annotations.proto";

option go_package = "github.com/ydssx/morphix/api/payment/v1;paymentv1";

// 支付方式
enum PaymentMethod {
  UNKNOWN = 0;
  ALIPAY = 1;
  WECHAT = 2;
  PAYPAL = 3;
}

// 支付状态
enum PaymentStatus {
  PENDING = 0;
  SUCCESS = 1;
  FAILED = 2;
}

// 支付请求
message MakePaymentRequest {
  string order_number = 1;
  double amount = 2;
  string currency = 3;
}

// 支付响应
message PaymentResponse {
  string order_number = 1;
  string status = 2;
  string payment_url = 3;
}

// 查询支付请求
message GetPaymentRequest {
  string order_number = 1;
}

// 查询支付响应
message GetPaymentResponse {
  string order_number = 1;
  double amount = 2;
  string currency = 3;
  PaymentStatus status = 4;
}

// 取消支付请求
message CancelPaymentRequest {
  int64 order_number = 1;
}

// 取消支付响应
message CancelPaymentResponse {
  string status = 1;
  // 其他字段...
}

// 退款请求
message RefundRequest {
  string order_number = 1;
  double amount = 2;
  string currency = 3;
}

// 退款响应
message RefundResponse {
  string order_number = 1;
  string status = 2;
}

// 定义支付服务接口
service PaymentService {
  // 发起支付
  rpc MakePayment(MakePaymentRequest) returns (PaymentResponse) {
    option (google.api.http) = {
      post: "/api/v1/payments"
      body: "*"
    };
  }

  // 查询支付状态
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {
    option (google.api.http) = {get: "/api/v1/payments/{order_number}"};
  }

  // 取消支付
  rpc CancelPayment(CancelPaymentRequest) returns (CancelPaymentResponse) {
    option (google.api.http) = {delete: "/api/v1/payments/{order_number}"};
  }

  // 退款
  rpc Refund(RefundRequest) returns (RefundResponse) {
    option (google.api.http) = {
      post: "/api/v1/payments/{order_number}/refund"
      body: "*"
    };
  }
  // 其他服务方法...
}
